--- a/styles.css
+++ b/styles.css
@@ -334,6 +334,9 @@ input[type="text"], textarea {
 .tab-button[data-category="Pasteleria"] {
   background-color: #f8bbd0; /* Rosa más claro */
 }
+.tab-button[data-category="Panaderia"] {
+  background-color: #FFBE33; /* Rosa más claro */
+}
 
 .delete-btn {
   align-items: center;
