--- a/styles.css
+++ b/styles.css
@@ -335,7 +335,7 @@ input[type="text"], textarea {
   background-color: #f8bbd0; /* Rosa más claro */
 }
 .tab-button[data-category="Panaderia"] {
-  background-color: #FFBE33; /* Rosa más claro */
+  background-color: #F3A90A; /* NARANJA */
 }
 
 .delete-btn {
